Thu Aug 26 11:18:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htdoc/attrs.html: increase default
	maximum_word_length to 32.

Wed Aug 25 16:50:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_word): add code to check for compound words
	and add their component parts to the word dictionary.
	* htdig/PDF.cc(parseString), htdig/Plaintext.cc(parse): Don't strip
	punctuation or lowercase the word before calling got_word.  That
	should be left up to got_word & Word methods.

	* htlib/StringMatch.h, htlib/StringMatch.cc(Pattern, IgnoreCase):
	Add an IgnorePunct() method, which allows matches to skip over valid
	punctuation, change Pattern() and IgnoreCase() to accomodate this.
	* htsearch/htsearch.cc(main, createLogicalWords): use IgnorePunct()
	to highlight matching words in excerpts regardless of punctuation,
	toss out old origPattern, and don't add short or bad words to
	logicalPattern.

	* htlib/HtWordType.h, htlib/HtWordType.cc(Initialize): set up and
	use a lookup table to speed up HtIsWordChar() and HtIsStrictWordChar().

Mon Aug 23 10:13:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(parse): fix problems with null pointer when attempting
	SGML entity decoding on bare &, as reported by Vadim Chekan.

Thu Aug 19 11:52:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): Fix to allow multiple keywords
	input parameter definitions.

	* contrib/parse_doc.pl: make spaces optional in LANGUAGE = POSTSCRIPT
	PJL test.

Wed Aug 18 11:27:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse): Fixed wrong variable name in new code.
	Double-Oops!  (It was Friday the 13th, after all...)

Tue Aug 17 16:26:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/HtHeap.cc(Remove): apply Geoff's patch to fix Remove.

	* htlib/HtVector.h, htlib/HtVector.cc(Index): various bounds overrun